resource-aggregate: fill audit context to event resourceLinksSnapshotTaken from the last modifier (#489)
* resource-aggregate: fill audit context to event resourceLinksSnapshotTaken from the last modifier

* resource-aggregate: rename policies to policy as is named in OCF
